platform/ingress/rideshare-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rideshare-ingress-matching-ws
  namespace: rideshare
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - rideshare.lukmonadeokun.com
      secretName: rideshare-prod-use1-tls

  rules:
    - host: rideshare.lukmonadeokun.com
      http:
        paths:
          - path: /api/v1/matching/ws
            pathType: Prefix
            backend:
              service:
                name: matching-service
                port:
                  number: 3004

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rideshare-ingress
  namespace: rideshare
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - rideshare.lukmonadeokun.com
      secretName: rideshare-prod-use1-tls

  rules:
    - host: rideshare.lukmonadeokun.com
      http:
        paths:
          - path: /api/v1/riders
            pathType: Prefix
            backend:
              service:
                name: rider-service
                port:
                  number: 3001

          - path: /api/v1/drivers
            pathType: Prefix
            backend:
              service:
                name: driver-service
                port:
                  number: 3003

          - path: /api/v1/trips
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 3005

          - path: /api/v1/fares
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 3005

          - path: /api/v1/email
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 3002

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
